--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-gesture-handler": "^2.6.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-shadow-2": "^7.0.5",
+    "react-native-svg": "12.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
