--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-shadow-2": "^7.0.5",
     "react-native-svg": "12.3.0",
+    "react-navigation": "^4.4.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
