--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+#REDIS
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6380
+spring.redis.password=mypass
+spring.redis.timeout=600000
